--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
