--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "tar": "^7.5.1",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
